removed superfluous classes in each <section> of <main>; adjusted CSS to select .content for styling that applied to all of those sections and used those section ids in place of class name for more specific styling; reduces syntax in both HTML and CSS while increasing clarity and structure; removed .footer class and added #madeBy id to select that element for styling; fixed bug with .hero img resizing incorrectly but still have bug with gray strip between the header and the image when browser window is narrowed; added #header tag to the <h1> in header for more specific CSS selector and to clarify the element in HTML

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,12 +15,12 @@ body {
     color: #ffffff;
 }
 
-.header h1 {
+#header {
     display: inline-block;
     font-size: 48px;
 }
 
-.seo {
+#seo {
     color: #d9dcd6;
 }
 
@@ -54,6 +54,7 @@ p {
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
+    object-fit: cover;
 }
 
 .float-left {
@@ -72,64 +73,30 @@ p {
     margin-left: 20px;
 }
 
-.search-engine-optimization {
+.content img {
+    max-height: 200px;
+}
+
+.content h2{
+    margin-bottom: 20px;
+    font-size: 36px;
+}
+
+#search-engine-optimization,
+#online-reputation-management,
+#social-media-marketing {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #0072bb;
     color: #ffffff;
-}
-
-.online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.search-engine-optimization img {
-    max-height: 200px;
-}
-
-.online-reputation-management img {
-    max-height: 200px;
-}
-
-.social-media-marketing img {
-    max-height: 200px;
-}
-
-.search-engine-optimization h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
 }
 
 .benefits {
     margin-right: 20px;
     padding: 20px;
-    padding-bottom: 54px;
+    padding-bottom: 52px;
     clear: both;
     float: right;
     width: 20%;
@@ -155,13 +122,13 @@ p {
     max-width: 150px;
 }
 
-.footer {
+footer {
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
 
-.footer h2 {
+#madeBy {
     font-size: 20px;
 }
